--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "moment": "^2.17.0"
+    "moment": "^2.17.0",
+    "morgan": "^1.7.0"
   },
   "repository": {
     "type": "git",
