--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "jade": "^1.11.0",
     "moment": "^2.17.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "pug": "^2.0.0-beta6"
   },
   "repository": {
     "type": "git",
